// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="c50rhq soui-tag-tag c4bgx3u soui-tag-info cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="c50rhq soui-tag-tag crtw5jj soui-tag-danger cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="c50rhq soui-tag-tag c56r0og soui-tag-warning cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="c50rhq soui-tag-tag cqqqd1z soui-tag-success cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag c-uefp8f soui-tag-tangerine cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag caswu5 soui-tag-magenta cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cxti8x4 soui-tag-purple cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cue38vy soui-tag-indigo cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bdb7z soui-tag-cyan cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bjxky soui-tag-neon cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-855th5 soui-tag-lemon cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-8afewm soui-tag-brown cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag c-uefp8f soui-tag-tangerine c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag caswu5 soui-tag-magenta c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cxti8x4 soui-tag-purple c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cue38vy soui-tag-indigo c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bdb7z soui-tag-cyan c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bjxky soui-tag-neon c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-855th5 soui-tag-lemon c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-8afewm soui-tag-brown c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag c-uefp8f soui-tag-tangerine c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag caswu5 soui-tag-magenta c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cxti8x4 soui-tag-purple c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cue38vy soui-tag-indigo c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bdb7z soui-tag-cyan c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bjxky soui-tag-neon c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-855th5 soui-tag-lemon c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-8afewm soui-tag-brown c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag c-uefp8f soui-tag-tangerine c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag caswu5 soui-tag-magenta c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cxti8x4 soui-tag-purple c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cue38vy soui-tag-indigo c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bdb7z soui-tag-cyan c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bjxky soui-tag-neon c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-855th5 soui-tag-lemon c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-8afewm soui-tag-brown c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bgx3u soui-tag-info cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag crtw5jj soui-tag-danger cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c56r0og soui-tag-warning cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cqqqd1z soui-tag-success cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bgx3u soui-tag-info c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag crtw5jj soui-tag-danger c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c56r0og soui-tag-warning c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cqqqd1z soui-tag-success c4bewkv soui-tag-fill"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bgx3u soui-tag-info c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag crtw5jj soui-tag-danger c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c56r0og soui-tag-warning c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cqqqd1z soui-tag-success c-vpcg16 soui-tag-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c4bgx3u soui-tag-info c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag crtw5jj soui-tag-danger c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c56r0og soui-tag-warning c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cqqqd1z soui-tag-success c-ypqis soui-tag-bright-outline"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag c-816eed soui-tag-small cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c50rhq soui-tag-tag c-8589wx soui-tag-large cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="c50rhq soui-tag-tag c-816eed soui-tag-small cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <div
        class="ccz7i93 soui-tag-wrapper"
      >
        <span
          class="cz02wph soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="cxtaq79 soui-tag-close-icon"
      >
        <span
          class="c-s1d4ya soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <div
        class="ccz7i93 soui-tag-wrapper"
      >
        <span
          class="cz02wph soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="cxtaq79 soui-tag-close-icon"
      >
        <span
          class="c-s1d4ya soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c50rhq soui-tag-tag c-8589wx soui-tag-large cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <div
        class="ccz7i93 soui-tag-wrapper"
      >
        <span
          class="cz02wph soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="cxtaq79 soui-tag-close-icon"
      >
        <span
          class="c-s1d4ya soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <div
        class="ccz7i93 soui-tag-wrapper"
      >
        <span
          class="cz02wph soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="cxtaq79 soui-tag-close-icon"
      >
        <span
          class="c-s1d4ya soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
    >
      <div
        class="ccz7i93 soui-tag-wrapper"
      >
        <span
          class="cz02wph soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="cxtaq79 soui-tag-close-icon"
      >
        <span
          class="c-s1d4ya soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright cezsuw8 soui-tag-disabled"
    >
      <div
        class="ccz7i93 soui-tag-wrapper"
      >
        <span
          class="cz02wph soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="cxtaq79 soui-tag-close-icon"
      >
        <span
          class="c-s1d4ya soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c50rhq soui-tag-tag cc50qtx soui-tag-default c-vpcg16 soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="ccz7i93 soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
  >
    <div
      class="ccz7i93 soui-tag-wrapper"
    >
      <span
        class="cz02wph soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="cxtaq79 soui-tag-close-icon"
    >
      <span
        class="c-s1d4ya soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="c50rhq soui-tag-tag cc50qtx soui-tag-default cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="c50rhq soui-tag-tag c9i5mwx soui-tag-rounded cc50qtx soui-tag-default cr527za soui-tag-bright"
  >
    <span
      class="ccz7i93 soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
